2010-04-01  Martin Claus  <mclaus@ifm-geomar.de>

	* vertwind: added missing value support
	
2010-03-25  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* standard deviation (bug fix): change the result from missval to zero, if variance is zero [report: Jaison-Thomas Ambadan]

2010-03-23  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* Added operator tstepcount: count number of timesteps (experimental) [request: Swantje Preuschmann]

2010-03-20  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* import_binary: added support for variables with different number of levels [report: Dennis Shea]

2010-03-16  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* sellonlatbox: bug fix for parameter lon2 [report: Alberto Maurizi]
	* random: added optional parameter seed

2010-03-15  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* pstreamWriteRecord: check pstreamptr->varlist (bug fix) [report: Kevin Sieck]
	* added operator fldcor to correlate two fields
	
2010-03-12  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* added predefined grid t<RES>zon
	
2010-03-11  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* expr: added support for const/var (bug fix) [report: Youmin Chen]
	
2010-03-10  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* Added support for netCDF time bounds (bug fix) [report: Beate Geyer]

2010-03-07  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* Released module Gridboxstat
	
2010-03-03  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* inputsrv: added level information (bug fix) [report: Simon Blessing]

2010-02-22  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* using CDI library version 1.4.3
	* changed GRIB1 default packing type of spherical harmonics to complex
	* added CDO option -M to indicate that the I/O streams have missing values
	* Version 1.4.3 released

2010-02-08  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>

	* using CDI library version 1.4.2
	* Added new module Gridboxstat (testversion)
	* Version 1.4.2 released
	
2010-02-02  Uwe Schulzweida  <Uwe.Schulzweida@zmaw.de>