@@ -267,6 +267,7 @@ src/CDItest.c -text
 src/Cat.c -text
 src/Change.c -text
 src/Change_e5slm.c -text
+src/Cloudlayer.c -text
 src/Comp.c -text
 src/Compc.c -text
 src/Complextorect.c -text
